# menugen

./: CMakeLists.txt  README.md
source/: menugen.c  parser.c  parser.h
